fix: add profile - tailwind_hotwire_form_search

--- a/after_templates/rag_tailwind_hotwire_form_search/_theme_changer.html.erb
+++ b/after_templates/rag_tailwind_hotwire_form_search/_theme_changer.html.erb
@@ -1,35 +1,35 @@
 <div class="dropdown">
   <label tabindex="0" class="btn m-1">Select Theme</label>
-  <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52">
-    <li data-value="">Default</li>
-    <li data-value="aqua">Aqua</li>
-    <li data-value="black">Black</li>
-    <li data-value="bumblebee">Bumblebee</li>
-    <li data-value="cmyk">Cmyk</li>
-    <li data-value="corporate">Corporate</li>
-    <li data-value="cupcake">Cupcake</li>
-    <li data-value="cyberpunk">Cyberpunk</li>
-    <li data-value="dark">Dark</li>
-    <li data-value="dracula">Dracula</li>
-    <li data-value="emerald">Emerald</li>
-    <li data-value="fantasy">Fantasy</li>
-    <li data-value="forest">Forest</li>
-    <li data-value="garden">Garden</li>
-    <li data-value="halloween">Halloween</li>
-    <li data-value="light">Light</li>
-    <li data-value="lofi">Lofi</li>
-    <li data-value="luxury">Luxury</li>
-    <li data-value="pastel">Pastel</li>
-    <li data-value="retro">Retro</li>
-    <li data-value="synthwave">Synthwave</li>
-    <li data-value="valentine">Valentine</li>
-    <li data-value="wireframe">Wireframe</li>
-    <li data-value="autumn">Autumn</li>
-    <li data-value="business">Business</li>
-    <li data-value="acid">Acid</li>
-    <li data-value="lemonade">Lemonade</li>
-    <li data-value="night">Night</li>
-    <li data-value="coffee">Coffee</li>
-    <li data-value="winter">Winter</li>
+  <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52" data-controller='theme-changer' >
+    <li data-value="" data-action="click->theme-changer#select">Default</li>
+    <li data-value="aqua" data-action="click->theme-changer#select">Aqua</li>
+    <li data-value="black" data-action="click->theme-changer#select">Black</li>
+    <li data-value="bumblebee" data-action="click->theme-changer#select">Bumblebee</li>
+    <li data-value="cmyk" data-action="click->theme-changer#select">Cmyk</li>
+    <li data-value="corporate" data-action="click->theme-changer#select">Corporate</li>
+    <li data-value="cupcake" data-action="click->theme-changer#select">Cupcake</li>
+    <li data-value="cyberpunk" data-action="click->theme-changer#select">Cyberpunk</li>
+    <li data-value="dark" data-action="click->theme-changer#select">Dark</li>
+    <li data-value="dracula" data-action="click->theme-changer#select">Dracula</li>
+    <li data-value="emerald" data-action="click->theme-changer#select">Emerald</li>
+    <li data-value="fantasy" data-action="click->theme-changer#select">Fantasy</li>
+    <li data-value="forest" data-action="click->theme-changer#select">Forest</li>
+    <li data-value="garden" data-action="click->theme-changer#select">Garden</li>
+    <li data-value="halloween" data-action="click->theme-changer#select">Halloween</li>
+    <li data-value="light" data-action="click->theme-changer#select">Light</li>
+    <li data-value="lofi" data-action="click->theme-changer#select">Lofi</li>
+    <li data-value="luxury" data-action="click->theme-changer#select">Luxury</li>
+    <li data-value="pastel" data-action="click->theme-changer#select">Pastel</li>
+    <li data-value="retro" data-action="click->theme-changer#select">Retro</li>
+    <li data-value="synthwave" data-action="click->theme-changer#select">Synthwave</li>
+    <li data-value="valentine" data-action="click->theme-changer#select">Valentine</li>
+    <li data-value="wireframe" data-action="click->theme-changer#select">Wireframe</li>
+    <li data-value="autumn" data-action="click->theme-changer#select">Autumn</li>
+    <li data-value="business" data-action="click->theme-changer#select">Business</li>
+    <li data-value="acid" data-action="click->theme-changer#select">Acid</li>
+    <li data-value="lemonade" data-action="click->theme-changer#select">Lemonade</li>
+    <li data-value="night" data-action="click->theme-changer#select">Night</li>
+    <li data-value="coffee" data-action="click->theme-changer#select">Coffee</li>
+    <li data-value="winter" data-action="click->theme-changer#select">Winter</li>
   </select>
 </div>
