--- a/templates/thor_task/profile/after_template.rb.tt
+++ b/templates/thor_task/profile/after_template.rb.tt
@@ -1,7 +1,10 @@
 # frozen_string_literal: true
 
+# require 'pry'
+
 # <%= data.description %>
-require 'pry'
+#
+# exe/rag addons/<%= data.name_snake %>
 
 self.local_template_path = File.dirname(__FILE__)
 
@@ -13,3 +16,29 @@ route("root 'home#index'")
 force_copy
 
 copy_file 'home/index.html.erb', 'app/views/home/index.html.erb'
+
+after_bundle do
+  setup_db
+end
+
+def setup_db
+  # add_scaffold('post', 'title', 'body:text')
+  # add_scaffold('people', 'first_name', 'last_name', 'age:integer', 'address:text')
+  # add_scaffold('product', 'name', 'price:integer')
+
+  # db_migrate
+end
+
+# Other template command examples
+# css_install('tailwind')
+# rails_command('db:migrate')
+# bundle_add('hotwire-rails')
+# rails_command('hotwire:install')
+# run('bin/importmap pin sortablejs')
+# run('npm install daisyui')
+# create_file       'app/assets/stylesheets/custom-bootstrap-import.scss' , read_template('custom-bootstrap-import.scss')
+# append_to_file    'app/assets/config/manifest.js'                       , read_template('manifest.js')
+# insert_into_file  'app/views/layouts/application.html.erb', read_template('application.html.erb'),
+#     before: %(    <%%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>)
+# gsub_file         'app/views/layouts/application.html.erb', %(container mx-auto mt-28 px-5 flex), 'container mx-auto px-5'
+# template 'home.css', 'app/assets/stylesheets/home.css'
