--- a/templates/thor_task/profile/home/index.html.erb.tt
+++ b/templates/thor_task/profile/home/index.html.erb.tt
@@ -1,3 +1,7 @@
 <h1><%= data.name_human %></h1>
 
 <h2><%= data.description %></h2>
+
+<%%= link_to 'Products', products_path %> |
+<%%= link_to 'Posts', posts_path %> |
+<%%= link_to 'People', people_path %>
