addon groupdate in-progress

--- a/after_templates/addons/chartkick/app/views/layouts/_navbar.html.erb
+++ b/after_templates/addons/chartkick/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <header>
   <%= link_to 'Home', root_path %> |
-  <%# link_to 'Products', products_path %> |
+  <%= link_to 'Yogurt', yogurts_path %> |
   <%# link_to 'Posts', posts_path %> |
-  <%# link_to 'People', people_path %>
+  <%= link_to 'People', people_path %>
   <hr />
 </header>
