update printspeak profile

--- a/after_templates/application/printspeak/app/assets/stylesheets/page/styles.scss
+++ b/after_templates/application/printspeak/app/assets/stylesheets/page/styles.scss
@@ -17,6 +17,7 @@
 
 // Sections
 @import "./sections/masthead.scss";
+@import "./sections/pagehead.scss";
 @import "./sections/portfolio.scss";
 @import "./sections/timeline.scss";
 @import "./sections/team.scss";
