--- a/after_templates/application/printspeak/app/views/layouts/_footer.html.erb
+++ b/after_templates/application/printspeak/app/views/layouts/_footer.html.erb
@@ -8,8 +8,8 @@
         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
       </div>
       <div class="col-lg-4 text-lg-end">
-        <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
+        <%= link_to "Privacy Policy", page_privacy_path, class: "link-dark text-decoration-none me-3" %>
+        <%= link_to "Terms of Use", page_terms_path, class: "link-dark text-decoration-none" %>
       </div>
     </div>
   </div>
