--- a/after_templates/application/printspeak/app/assets/stylesheets/application.bootstrap.scss
+++ b/after_templates/application/printspeak/app/assets/stylesheets/application.bootstrap.scss
@@ -1,3 +1,3 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
-@import 'home/styles.scss'
+@import 'page/styles.scss'
