--- a/after_templates/addons/administrate/app/views/layouts/_navbar.html.erb
+++ b/after_templates/addons/administrate/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,8 @@
 <header>
   <%= link_to 'Home', root_path %> |
-  <%= link_to 'Admin', admin_root_path %>
+  <%= link_to 'Authors', authors_path %> |
+  <%= link_to 'Posts', posts_path %> |
+  <%= link_to 'Products', products_path %> |
+  <%= link_to 'Administrate', admin_root_path %> |
   <hr />
 </header>
