fix: add motor-admin profile

--- a/after_templates/addons/motor_admin/app/views/layouts/_navbar.html.erb
+++ b/after_templates/addons/motor_admin/app/views/layouts/_navbar.html.erb
@@ -3,6 +3,6 @@
   <%= link_to 'Authors', authors_path %> |
   <%= link_to 'Posts', posts_path %> |
   <%= link_to 'Products', products_path %> |
-  <%= link_to 'ADMIN', admin_root_path %>
+  <%= link_to 'ADMIN', motor_admin_path %>
   <hr />
 </header>
