fix: refactor for ruby 3.0, refactor bcrypt-ruby to bcrypt, cleanup warning messages

--- a/templates/thor_task/addon/addon.tt
+++ b/templates/thor_task/addon/addon.tt
@@ -1,6 +1,7 @@
 # frozen_string_literal: true
 
 # lib/rails_app_generator/rag_initializer.rb
+# add_if(:<%= data.name_snake %>)
 # rag.add_option :add_<%= data.name_snake %>            , type: :boolean, default: false
 
 module RailsAppGenerator
