fix: refactor motor-admin, mini_magick and hexapdf profile

--- a/after_templates/addons/mini_magick/app/views/layouts/_navbar.html.erb
+++ b/after_templates/addons/mini_magick/app/views/layouts/_navbar.html.erb
@@ -1,2 +1,6 @@
 <header>
+  <%= link_to 'Image 1', root_path(image: 1) %> |
+  <%= link_to 'Image 2', root_path(image: 2) %> |
+  <%= link_to 'Image 3', root_path(image: 3) %>
+  <hr />
 </header>
