--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -1,6 +1,7 @@
 source "https://rubygems.org"
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
+# xmen
 ruby <%= "'#{RUBY_VERSION}'" -%>
 
 <% gems.each do |gem| %><%= gem %>
