--- a/after_templates/rag/devise/app/views/layouts/application.html.erb
+++ b/after_templates/rag/devise/app/views/layouts/application.html.erb
@@ -14,16 +14,11 @@
   </head>
 
   <body>
-    <header>
-      <%%= render 'layouts/navbar' %>
-      <hr />
-    </header>
+    <%%= render 'layouts/navbar' %>
+    <%%= render 'layouts/alert' %>
     <main>
       <%%= yield %>
     </main>
-    <footer>
-      <%%= render 'layouts/footer' %>
-    </footer>
+    <%%= render 'layouts/footer' %>
   </body>
 </html>
-
