--- a/after_templates/addons/devise/app/views/layouts/_navbar.html.erb
+++ b/after_templates/addons/devise/app/views/layouts/_navbar.html.erb
@@ -1,8 +1,10 @@
-<header>
-  <%= link_to 'Home', root_path %> |
-  <%# link_to 'Some Action', home_some_action_path %> |
-  <%# link_to 'Products', products_path %> |
-  <%# link_to 'Posts', posts_path %> |
-  <%# link_to 'People', people_path %>
-  <hr />
-</header>
+<%= link_to 'Home', root_path %>
+| <%= link_to 'Posts', posts_path %>
+<% if current_user %>
+  <%= current_user.name || current_user.email %>
+| <%= link_to 'Edit', edit_user_registration_path %>
+| <%= link_to 'Sign Out', destroy_user_session_path, data: { turbo_method: :delete } %>
+<% else %>
+| <%= link_to 'Sign Up', new_user_registration_path %>
+| <%= link_to 'Sign In', new_user_session_path %>
+<% end%>
