fix: add brakeman profile

--- a/templates/thor_task/profile/profile.json.tt
+++ b/templates/thor_task/profile/profile.json.tt
@@ -6,6 +6,7 @@
   "opts": {
     "skip_git": true,
     "skip_test": true,
+    "add_minimal_css": true,
     "template": "<%= data.template_file %>",
     "add_<%= data.name_snake %>": true
   }
