fix: add kaminari profile

--- a/after_templates/addons/kaminari/app/views/home/index.html.erb
+++ b/after_templates/addons/kaminari/app/views/home/index.html.erb
@@ -1,3 +1,21 @@
 <h1>Kaminari</h1>
 
-<p>Description goes here</p>
+<p>Easily add pagination to your Ruby web apps</p>
+
+<h2>Configuration for this example is located at</h2>
+
+<pre><code>config/initializers/kaminari_config.rb</code></pre>
+
+<pre><code><%= File.read("config/initializers/kaminari_config.rb") %></code></pre>
+
+<h2>Run this template generator if you need to customize the pagination views</h2>
+
+<pre><code>rails g kaminari:views default</code></pre>
+
+<h3>List of files</h3>
+
+<%= image_tag("kaminari-custom-views.png") %>
+
+<h3>File details</h3>
+
+<%= image_tag("kaminari-custom-views-detailed.png") %>
