--- a/after_templates/addons/kaminari/app/views/layouts/application.html.erb
+++ b/after_templates/addons/kaminari/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
     <%- else -%>
     <%%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%- end -%>
+    <style>
+    table { 
+      table-layout: auto;
+    }
+    </style>
   </head>
 
   <body>
