--- a/after_templates/addons/kaminari/app/views/layouts/_navbar.html.erb
+++ b/after_templates/addons/kaminari/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,3 @@
 <%= link_to 'Home', root_path %>
-<%# link_to 'Products', products_path %>
-<%# link_to 'Posts', posts_path %>
-<%# link_to 'People', people_path %>
+| <%= link_to 'Posts', posts_path %>
 <hr />
