fix: add friendly_id addon

--- a/templates/thor_task/profile/app/views/layouts/_navbar.html.erb
+++ b/templates/thor_task/profile/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <%= link_to 'Home', root_path %>
-<%# link_to 'Products', products_path %>
-<%# link_to 'Posts', posts_path %>
-<%# link_to 'People', people_path %>
+| <%= link_to 'Products', products_path %>
+| <%= link_to 'Posts', posts_path %>
+| <%= link_to 'People', people_path %>
 <hr />
