--- a/after_templates/addons/avo/app/views/home/index.html.erb
+++ b/after_templates/addons/avo/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
-<h1>I18n.t('application_name')</h1>
+<h1><%= I18n.t('application_name') %></h1>
 
-<p>Avo abstracts away the common parts of building apps, letting your engineers work on your app's essential components. The result is a full-featured admin panel that works out of the box, ready to give to your end-users.</p>
+<p>Avo abstracts away the common parts of building apps, letting your engineers work on your app's essential components.</p>
+
+<p>The result is a full-featured admin panel that works out of the box, ready to give to your end-users.</p>
