--- a/after_templates/addons/avo/app/views/layouts/_navbar.html.erb
+++ b/after_templates/addons/avo/app/views/layouts/_navbar.html.erb
@@ -1,13 +1,19 @@
 <%= link_to 'Home', root_path %> |
+<%= link_to 'Re-Seed', home_reseed_path %> |
 <%= link_to 'Quick Sign In', home_quick_signin_path %> |
 <%= link_to 'AVO', avo_path %>
+<% if current_user %>
+<br>
 (
-<%= link_to 'Posts', posts_path, class: 'simple_scaffold' %> |
 <%= link_to 'Categories', categories_path, class: 'simple_scaffold' %> |
+<%= link_to 'Posts', posts_path, class: 'simple_scaffold' %> |
+<%= link_to 'Comments', comments_path, class: 'simple_scaffold' %> |
 <%= link_to 'Authors', users_path, class: 'simple_scaffold' %>
 )
 (
 <%= link_to 'Locations', locations_path, class: 'simple_scaffold' %> |
 <%= link_to 'Rooms', rooms_path, class: 'simple_scaffold' %> |
+<%= link_to 'Comments', comments_path, class: 'simple_scaffold' %> |
 <%= link_to 'Bookings', bookings_path, class: 'simple_scaffold' %>
 )
+<% end %>
