update klueless profile

--- a/after_templates/application/klueless/app/views/home/index.html.erb
+++ b/after_templates/application/klueless/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <h1><%= I18n.t('application_name') %></h1>
 
-<p>The Klue is to do Less</p>
+<%# <p>The Klue is to do Less</p>
 
 <p>No Code as a Service - Rails Application Builder</p>
-
+ %>
