--- a/after_templates/application/klueless/app/views/layouts/_navbar.html.erb
+++ b/after_templates/application/klueless/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,5 @@
   <%= link_to 'Home', root_path %>
+| <%= link_to 'Bookings', bookings_path %>
 | <%= link_to 'Re-Seed', home_reseed_path, style: 'color: blue; font-weight: 600;' %>
 | <%= link_to 'Refresh Material View', home_refresh_material_view_path, style: 'color: blue; font-weight: 600;' %>
 | <%= link_to 'Quick Sign In', home_quick_signin_path %>
