fix: update factory_bot profile

--- a/templates/thor_task/profile/profile.json.tt
+++ b/templates/thor_task/profile/profile.json.tt
@@ -1,7 +1,8 @@
 {
   "args": {
     "app_path": "r7_<%= data.name_snake %>",
-    "destination_root": "<%= data.destination_root %>"
+    "destination_root": "<%= data.destination_root %>",
+    "when_folder_exist": "destroy"
   },
   "opts": {
     "skip_git": true,
