--- a/after_templates/addons/factory_bot/app/views/layouts/_navbar.html.erb
+++ b/after_templates/addons/factory_bot/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,10 @@
 <%= link_to 'Home', root_path %>
-| <%= link_to 'Products', products_path %>
-| <%= link_to 'Posts', posts_path %>
-| <%= link_to 'People', people_path %>
+| <%= link_to 'Apps', apps_path %>
+| <%= link_to 'Tenants', tenants_path %>
+| <%= link_to 'Employees', employees_path %>
+| <%= link_to 'Roles', roles_path %>
+| <%= link_to 'Projects', projects_path %>
+| <%= link_to 'Articles', articles_path %>
+| <%= link_to 'Videos', videos_path %>
+| <%= link_to 'Re-Seed', home_reseed_path, style: 'color: blue; font-weight: 600;' %>
 <hr />
