--- a/after_templates/addons/factory_bot/app/views/layouts/_navbar.html.erb
+++ b/after_templates/addons/factory_bot/app/views/layouts/_navbar.html.erb
@@ -1,10 +1,17 @@
 <%= link_to 'Home', root_path %>
-| <%= link_to 'Apps', apps_path %>
-| <%= link_to 'Tenants', tenants_path %>
-| <%= link_to 'Employees', employees_path %>
-| <%= link_to 'Roles', roles_path %>
-| <%= link_to 'Projects', projects_path %>
-| <%= link_to 'Articles', articles_path %>
-| <%= link_to 'Videos', videos_path %>
-| <%= link_to 'Re-Seed', home_reseed_path, style: 'color: blue; font-weight: 600;' %>
+| <%= link_to 'Region', regions_path %>
+| <%= link_to 'Company', companies_path %>
+
+
+
+| <%= link_to 'Video', videos_path %>
+| <%= link_to 'Article', articles_path %>
+| <%= link_to 'Project', projects_path %>
+| <%= link_to 'EmployeeRole', employee_roles_path %>
+| <%= link_to 'Employee', employees_path %>
+| <%= link_to 'Role', roles_path %>
+| <%= link_to 'Reserved', reserveds_path %>
+
+| <%= link_to 'Test Data', home_test_data_path, style: 'color: blue; font-weight: 600;' %>
+| <%= link_to 'Sample Data', home_sample_data_path, style: 'color: blue; font-weight: 600;' %>
 <hr />
