fix: update view_component profile

--- a/after_templates/addons/view_component/app/views/home/component.html.erb
+++ b/after_templates/addons/view_component/app/views/home/component.html.erb
@@ -5,4 +5,8 @@
 
 <%= render(PriceChartComponent.new(@pricing_data1)) %>
 
-<%= render(PriceChartComponent.new(@pricing_data2)) %>
+<%= price_chart(@pricing_data2) %>
+
+<%= price_chart(@pricing_data3) %>
+
+
